force-app/main/default/objects/Invoice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <inlineHelpText>Search for the Account which this invoice is related to</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>