force-app/main/default/objects/Invoice__c/fields/Additional_Client_Adjustment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Client_Adjustment_Notes__c</fullName>
    <label>Additional Client Adjustment Notes</label>
    <type>TextArea</type>
</CustomField>