force-app/main/default/objects/Invoice__c/fields/Additional_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Additional_Credit_Amount__c</fullName>
    <label>Additional Credit Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>