force-app/main/default/objects/Invoice__c/fields/Billable_Conversions__c.field-meta.xml
<CustomField>
    <fullName>Billable_Conversions__c</fullName>
    <label>Billable Conversions</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>