force-app/main/default/objects/Invoice__c/fields/Billable_Spend__c.field-meta.xml
<CustomField>
    <fullName>Billable_Spend__c</fullName>
    <label>Billable Spend</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>