force-app/main/default/objects/Invoice__c/fields/Chargeback_Conversions__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Conversions__c</fullName>
    <inlineHelpText>Number of conversions being charged back - omit if not applicable</inlineHelpText>
    <label>Chargeback Conversions</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>