force-app/main/default/objects/Invoice__c/fields/Client_Approved_Spend__c.field-meta.xml
<CustomField>
    <fullName>Client_Approved_Spend__c</fullName>
    <defaultValue>( VALUE(&quot;Billable_Spend__c&quot;))</defaultValue>
    <label>Client Approved Spend</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>