force-app/main/default/objects/Invoice__c/fields/Client_Invoice_Rejected_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Invoice_Rejected_Notes__c</fullName>
    <label>Client Invoice Rejected Notes</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>