force-app/main/default/objects/Invoice__c/fields/Custom_Invoice_Period__c.field-meta.xml
<CustomField>
    <fullName>Custom_Invoice_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select &apos;True&apos; to customize the invoicing date range (start,end)</inlineHelpText>
    <label>Custom Invoice Period</label>
    <type>Checkbox</type>
</CustomField>