force-app/main/default/objects/Invoice__c/fields/Demand_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Demand_Account_Owner__c</fullName>
    <formula>Account__r.Internal_Account_Manager_Demand__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this field is blank, please have the Demand Account Owner update the Account details page</inlineHelpText>
    <label>Demand Account Owner</label>
    <type>Text</type>
</CustomField>