force-app/main/default/objects/Invoice__c/fields/HO_Advertiser_ID__c.field-meta.xml
<CustomField>
    <fullName>HO_Advertiser_ID__c</fullName>
    <label>HO Advertiser ID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>