force-app/main/default/objects/Invoice__c/fields/HO_Total_Conversions_billable_tz__c.field-meta.xml
<CustomField>
    <fullName>HO_Total_Conversions_billable_tz__c</fullName>
    <label>HO Total Conversions (billable tz)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>