force-app/main/default/objects/Invoice__c/fields/HO_Total_Revenue_billable_tz__c.field-meta.xml
<CustomField>
    <fullName>HO_Total_Revenue_billable_tz__c</fullName>
    <label>HO Total Revenue (billable tz)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>