force-app/main/default/objects/Invoice__c/fields/HO_Total_Revenue_est__c.field-meta.xml
<CustomField>
    <fullName>HO_Total_Revenue_est__c</fullName>
    <label>HO Total Revenue (est)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>