force-app/main/default/objects/Invoice__c/fields/Internal_Rejected_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Rejected_Notes__c</fullName>
    <label>Internal Rejected Notes</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>