force-app/main/default/objects/Invoice__c/fields/Invoice_Datasource__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Datasource__c</fullName>
    <label>Invoice Datasource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>