force-app/main/default/objects/Invoice__c/fields/Invoice_Date_Range_End__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_Range_End__c</fullName>
    <label>Invoice Date Range - End</label>
    <type>Date</type>
</CustomField>