force-app/main/default/objects/Invoice__c/fields/invoice_date_range_start__c.field-meta.xml
<CustomField>
    <fullName>invoice_date_range_start__c</fullName>
    <label>Invoice Date Range - Start</label>
    <type>Date</type>
</CustomField>