force-app/main/default/objects/Invoice__c/fields/Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Name__c</fullName>
    <defaultValue>&quot;Invoice__r.Account__c Invoice -(MONTH(create date)-1)- YEAR(created date)&quot;</defaultValue>
    <label>Invoice Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>