force-app/main/default/objects/Invoice__c/fields/Invoice_Period_month_year__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Period_month_year__c</fullName>
    <inlineHelpText>If the invoice requires a custom invoice date range, leave this field unselected</inlineHelpText>
    <label>Invoice Period - month-year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Janurary -2018</fullName>
            </value>
            <value>
                <fullName>February-2018</fullName>
            </value>
            <value>
                <fullName>March-2018</fullName>
            </value>
            <value>
                <fullName>April-2018</fullName>
            </value>
            <value>
                <fullName>May-2018</fullName>
            </value>
            <value>
                <fullName>June-2018</fullName>
            </value>
            <value>
                <fullName>July-2018</fullName>
            </value>
            <value>
                <fullName>August-2018</fullName>
            </value>
            <value>
                <fullName>September-2018</fullName>
            </value>
            <value>
                <fullName>October-2018</fullName>
            </value>
            <value>
                <fullName>November-2018</fullName>
            </value>
            <value>
                <fullName>December-2018</fullName>
            </value>
            <value>
                <fullName>Janurary -2019</fullName>
            </value>
            <value>
                <fullName>February-2019</fullName>
            </value>
            <value>
                <fullName>March-2019</fullName>
            </value>
            <value>
                <fullName>April-2019</fullName>
            </value>
            <value>
                <fullName>May-2019</fullName>
            </value>
            <value>
                <fullName>June-2019</fullName>
            </value>
            <value>
                <fullName>July-2019</fullName>
            </value>
            <value>
                <fullName>August-2019</fullName>
            </value>
            <value>
                <fullName>September-2019</fullName>
            </value>
            <value>
                <fullName>October-2019</fullName>
            </value>
            <value>
                <fullName>November-2019</fullName>
            </value>
            <value>
                <fullName>December-2019</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>