force-app/main/default/objects/Invoice__c/fields/Invoicing_Internal_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Internal_Status_Notes__c</fullName>
    <inlineHelpText>Use this field for internal notes on why an invoice cannot be prepared/sent to the client for approval</inlineHelpText>
    <label>Invoicing Internal Status Notes</label>
    <type>TextArea</type>
</CustomField>