force-app/main/default/objects/Invoice__c/fields/Submit_for_Client_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Client_Approval__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Please uncheck this box if the invoice has not been prepared yet for approval by the client</inlineHelpText>
    <label>Submit for Client Approval</label>
    <type>Checkbox</type>
</CustomField>